bison/fc_parser.output
Terminals unused in grammar

   ERROR_MESSAGE
   KW_DO
   KW_NOT
   OP_NOT
   KW_DIV


Grammar

    0 $accept: program TK_EOF

    1 program: variable_declaration function_declaration main_decl

    2 variable_declaration: %empty
    3                     | variable_declaration data_types OP_SEMICOLON

    4 data_types: basic_data_type IDENTIFIER
    5           | data_types OP_COMMA IDENTIFIER
    6           | matrix_decl
    7           | comp
    8           | static_comp

    9 function_declaration: %empty
   10                     | header func_body function_declaration

   11 main_decl: KW_MAIN OP_LEFT_PARENTHESIS OP_RIGHT_PARENTHESIS func_body

   12 header: basic_data_type IDENTIFIER OP_LEFT_PARENTHESIS parameters OP_RIGHT_PARENTHESIS
   13       | KW_VOID IDENTIFIER OP_LEFT_PARENTHESIS parameters OP_RIGHT_PARENTHESIS

   14 func_body: KW_BEGIN body_code comm2 KW_END

   15 body_code: %empty
   16          | func_data_types OP_SEMICOLON body_code

   17 func_data_types: basic_data_type IDENTIFIER
   18                | func_data_types OP_COMMA IDENTIFIER
   19                | basic_data_type IDENTIFIER OP_ASSIGNMENT sinplin const
   20                | func_data_types OP_COMMA IDENTIFIER OP_ASSIGNMENT sinplin const

   21 parameters: basic_data_type IDENTIFIER
   22           | parameters OP_COMMA basic_data_type IDENTIFIER

   23 matrix_decl: basic_data_type IDENTIFIER multi_bracket
   24            | data_types OP_COMMA IDENTIFIER multi_bracket

   25 comp: basic_data_type IDENTIFIER OP_ASSIGNMENT sinplin const
   26     | data_types OP_COMMA IDENTIFIER OP_ASSIGNMENT sinplin const

   27 static_comp: KW_STATIC basic_data_type IDENTIFIER OP_ASSIGNMENT sinplin const

   28 multi_bracket: OP_LEFT_BRACKET POSITIVEINT OP_RIGHT_BRACKET
   29              | multi_bracket OP_LEFT_BRACKET POSITIVEINT OP_RIGHT_BRACKET

   30 basic_data_type: KW_INTEGER
   31                | KW_BOOLEAN
   32                | KW_CHARACTER
   33                | KW_REAL
   34                | KW_STRING

   35 sinplin: %empty
   36        | OP_PLUS
   37        | OP_MINUS

   38 const: REAL
   39      | POSITIVEINT
   40      | KW_TRUE
   41      | KW_FALSE

   42 command: simple_command
   43        | complex_command

   44 comm2: %empty
   45      | simple_command comm2

   46 simple_command: OP_SEMICOLON
   47               | IDENTIFIER OP_ASSIGNMENT expression OP_SEMICOLON
   48               | command_if
   49               | command_for
   50               | command_while
   51               | readString_command
   52               | readInteger_command
   53               | readReal_command
   54               | writeString_command
   55               | writeInteger_command
   56               | writeReal_command
   57               | KW_BREAK OP_SEMICOLON
   58               | KW_CONTINUE OP_SEMICOLON
   59               | KW_RETURN expression OP_SEMICOLON
   60               | IDENTIFIER OP_LEFT_PARENTHESIS function_variables OP_RIGHT_PARENTHESIS OP_SEMICOLON

   61 complex_command: KW_BEGIN comm2 KW_END

   62 command_if: KW_IF OP_LEFT_PARENTHESIS expression OP_RIGHT_PARENTHESIS command
   63           | KW_IF OP_LEFT_PARENTHESIS expression OP_RIGHT_PARENTHESIS KW_THEN command
   64           | KW_IF OP_LEFT_PARENTHESIS expression OP_RIGHT_PARENTHESIS KW_THEN command KW_ELSE command

   65 command_for: KW_FOR OP_LEFT_PARENTHESIS IDENTIFIER OP_ASSIGNMENT expression OP_SEMICOLON expression OP_SEMICOLON IDENTIFIER OP_ASSIGNMENT expression OP_RIGHT_PARENTHESIS command
   66            | KW_FOR OP_LEFT_PARENTHESIS IDENTIFIER OP_ASSIGNMENT expression OP_SEMICOLON IDENTIFIER OP_ASSIGNMENT expression OP_RIGHT_PARENTHESIS command

   67 command_while: KW_WHILE OP_LEFT_PARENTHESIS expression OP_RIGHT_PARENTHESIS command

   68 function_variables: %empty
   69                   | constant
   70                   | constant OP_COMMA function_variables

   71 expression: constant
   72           | OP_LEFT_PARENTHESIS expression OP_RIGHT_PARENTHESIS
   73           | expression OP_PLUS expression
   74           | expression OP_MINUS expression
   75           | expression OP_MULT expression
   76           | expression OP_DIV expression
   77           | expression KW_MOD expression
   78           | expression OP_OR expression
   79           | expression KW_OR expression
   80           | expression OP_AND expression
   81           | expression KW_AND expression
   82           | expression OP_EQUAL expression
   83           | expression OP_NOTEQUAL expression
   84           | expression OP_LESS expression
   85           | expression OP_GREATER expression
   86           | expression OP_LESSOREQUAL expression
   87           | expression OP_GREATEROREQUAL expression
   88           | OP_PLUS expression
   89           | OP_MINUS expression
   90           | IDENTIFIER OP_LEFT_PARENTHESIS expression OP_RIGHT_PARENTHESIS
   91           | IDENTIFIER OP_LEFT_BRACKET expression OP_RIGHT_BRACKET multi_exp_bracket
   92           | KW_TRUE
   93           | KW_FALSE

   94 multi_exp_bracket: %empty
   95                  | OP_LEFT_BRACKET expression OP_RIGHT_BRACKET multi_exp_bracket

   96 constant: POSITIVEINT
   97         | REAL
   98         | IDENTIFIER

   99 readString_command: IDENTIFIER OP_ASSIGNMENT KW_READSTRING OP_LEFT_PARENTHESIS OP_RIGHT_PARENTHESIS OP_SEMICOLON

  100 readInteger_command: IDENTIFIER OP_ASSIGNMENT KW_READINTEGER OP_LEFT_PARENTHESIS OP_RIGHT_PARENTHESIS OP_SEMICOLON

  101 readReal_command: IDENTIFIER OP_ASSIGNMENT KW_READREAL OP_LEFT_PARENTHESIS OP_RIGHT_PARENTHESIS OP_SEMICOLON

  102 writeString_command: KW_WRITESTRING OP_LEFT_PARENTHESIS IDENTIFIER OP_RIGHT_PARENTHESIS OP_SEMICOLON
  103                    | KW_WRITESTRING OP_LEFT_PARENTHESIS CONSTANT_STRING OP_RIGHT_PARENTHESIS OP_SEMICOLON

  104 writeInteger_command: KW_WRITEINTEGER OP_LEFT_PARENTHESIS expression OP_RIGHT_PARENTHESIS OP_SEMICOLON

  105 writeReal_command: KW_WRITEREAL OP_LEFT_PARENTHESIS IDENTIFIER OP_RIGHT_PARENTHESIS OP_SEMICOLON


Terminals, with rules where they appear

TK_EOF (0) 0
error (256)
ERROR_MESSAGE (258)
KW_STATIC (259) 27
KW_TRUE (260) 40 92
KW_FALSE (261) 41 93
KW_DO (262)
KW_IF (263) 62 63 64
KW_NOT (264)
KW_BOOLEAN (265) 31
KW_BREAK (266) 57
KW_ELSE (267) 64
KW_AND (268) 81
KW_INTEGER (269) 30
KW_STRING (270) 34
KW_CONTINUE (271) 58
KW_FOR (272) 65 66
KW_MOD (273) 77
KW_CHARACTER (274) 32
KW_VOID (275) 13
KW_RETURN (276) 59
KW_END (277) 14 61
KW_BEGIN (278) 14 61
KW_REAL (279) 33
KW_WHILE (280) 67
KW_OR (281) 79
KW_MAIN (282) 11
KW_READSTRING (283) 99
KW_READINTEGER (284) 100
KW_READREAL (285) 101
KW_WRITESTRING (286) 102 103
KW_WRITEINTEGER (287) 104
KW_WRITEREAL (288) 105
IDENTIFIER (289) 4 5 12 13 17 18 19 20 21 22 23 24 25 26 27 47 60 65
    66 90 91 98 99 100 101 102 105
CONSTANT_STRING (290) 103
POSITIVEINT (291) 28 29 39 96
REAL (292) 38 97
OP_PLUS (293) 36 73 88
OP_MINUS (294) 37 74 89
OP_MULT (295) 75
OP_DIV (296) 76
OP_EQUAL (297) 82
OP_NOTEQUAL (298) 83
OP_LESS (299) 84
OP_LESSOREQUAL (300) 86
OP_GREATER (301) 85
OP_GREATEROREQUAL (302) 87
OP_ASSIGNMENT (303) 19 20 25 26 27 47 65 66 99 100 101
OP_SEMICOLON (304) 3 16 46 47 57 58 59 60 65 66 99 100 101 102 103
    104 105
OP_LEFT_PARENTHESIS (305) 11 12 13 60 62 63 64 65 66 67 72 90 99 100
    101 102 103 104 105
OP_RIGHT_PARENTHESIS (306) 11 12 13 60 62 63 64 65 66 67 72 90 99 100
    101 102 103 104 105
OP_COMMA (307) 5 18 20 22 24 26 70
OP_LEFT_BRACKET (308) 28 29 91 95
OP_RIGHT_BRACKET (309) 28 29 91 95
OP_AND (310) 80
OP_OR (311) 78
OP_NOT (312)
KW_DIV (313)
KW_THEN (314) 63 64


Nonterminals, with rules where they appear

$accept (60)
    on left: 0
program (61)
    on left: 1, on right: 0
variable_declaration (62)
    on left: 2 3, on right: 1 3
data_types (63)
    on left: 4 5 6 7 8, on right: 3 5 24 26
function_declaration (64)
    on left: 9 10, on right: 1 10
main_decl (65)
    on left: 11, on right: 1
header (66)
    on left: 12 13, on right: 10
func_body (67)
    on left: 14, on right: 10 11
body_code (68)
    on left: 15 16, on right: 14 16
func_data_types (69)
    on left: 17 18 19 20, on right: 16 18 20
parameters (70)
    on left: 21 22, on right: 12 13 22
matrix_decl (71)
    on left: 23 24, on right: 6
comp (72)
    on left: 25 26, on right: 7
static_comp (73)
    on left: 27, on right: 8
multi_bracket (74)
    on left: 28 29, on right: 23 24 29
basic_data_type (75)
    on left: 30 31 32 33 34, on right: 4 12 17 19 21 22 23 25 27
sinplin (76)
    on left: 35 36 37, on right: 19 20 25 26 27
const (77)
    on left: 38 39 40 41, on right: 19 20 25 26 27
command (78)
    on left: 42 43, on right: 62 63 64 65 66 67
comm2 (79)
    on left: 44 45, on right: 14 45 61
simple_command (80)
    on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60, on right:
    42 45
complex_command (81)
    on left: 61, on right: 43
command_if (82)
    on left: 62 63 64, on right: 48
command_for (83)
    on left: 65 66, on right: 49
command_while (84)
    on left: 67, on right: 50
function_variables (85)
    on left: 68 69 70, on right: 60 70
expression (86)
    on left: 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88
    89 90 91 92 93, on right: 47 59 62 63 64 65 66 67 72 73 74 75 76
    77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 95 104
multi_exp_bracket (87)
    on left: 94 95, on right: 91 95
constant (88)
    on left: 96 97 98, on right: 69 70 71
readString_command (89)
    on left: 99, on right: 51
readInteger_command (90)
    on left: 100, on right: 52
readReal_command (91)
    on left: 101, on right: 53
writeString_command (92)
    on left: 102 103, on right: 54
writeInteger_command (93)
    on left: 104, on right: 55
writeReal_command (94)
    on left: 105, on right: 56


State 0

    0 $accept: . program TK_EOF
    1 program: . variable_declaration function_declaration main_decl
    2 variable_declaration: . %empty
    3                     | . variable_declaration data_types OP_SEMICOLON

    $default  reduce using rule 2 (variable_declaration)

    program               go to state 1
    variable_declaration  go to state 2


State 1

    0 $accept: program . TK_EOF

    TK_EOF  shift, and go to state 3


State 2

    1 program: variable_declaration . function_declaration main_decl
    3 variable_declaration: variable_declaration . data_types OP_SEMICOLON
    4 data_types: . basic_data_type IDENTIFIER
    5           | . data_types OP_COMMA IDENTIFIER
    6           | . matrix_decl
    7           | . comp
    8           | . static_comp
    9 function_declaration: . %empty  [KW_MAIN]
   10                     | . header func_body function_declaration
   12 header: . basic_data_type IDENTIFIER OP_LEFT_PARENTHESIS parameters OP_RIGHT_PARENTHESIS
   13       | . KW_VOID IDENTIFIER OP_LEFT_PARENTHESIS parameters OP_RIGHT_PARENTHESIS
   23 matrix_decl: . basic_data_type IDENTIFIER multi_bracket
   24            | . data_types OP_COMMA IDENTIFIER multi_bracket
   25 comp: . basic_data_type IDENTIFIER OP_ASSIGNMENT sinplin const
   26     | . data_types OP_COMMA IDENTIFIER OP_ASSIGNMENT sinplin const
   27 static_comp: . KW_STATIC basic_data_type IDENTIFIER OP_ASSIGNMENT sinplin const
   30 basic_data_type: . KW_INTEGER
   31                | . KW_BOOLEAN
   32                | . KW_CHARACTER
   33                | . KW_REAL
   34                | . KW_STRING

    KW_STATIC     shift, and go to state 4
    KW_BOOLEAN    shift, and go to state 5
    KW_INTEGER    shift, and go to state 6
    KW_STRING     shift, and go to state 7
    KW_CHARACTER  shift, and go to state 8
    KW_VOID       shift, and go to state 9
    KW_REAL       shift, and go to state 10

    $default  reduce using rule 9 (function_declaration)

    data_types            go to state 11
    function_declaration  go to state 12
    header                go to state 13
    matrix_decl           go to state 14
    comp                  go to state 15
    static_comp           go to state 16
    basic_data_type       go to state 17


State 3

    0 $accept: program TK_EOF .

    $default  accept


State 4

   27 static_comp: KW_STATIC . basic_data_type IDENTIFIER OP_ASSIGNMENT sinplin const
   30 basic_data_type: . KW_INTEGER
   31                | . KW_BOOLEAN
   32                | . KW_CHARACTER
   33                | . KW_REAL
   34                | . KW_STRING

    KW_BOOLEAN    shift, and go to state 5
    KW_INTEGER    shift, and go to state 6
    KW_STRING     shift, and go to state 7
    KW_CHARACTER  shift, and go to state 8
    KW_REAL       shift, and go to state 10

    basic_data_type  go to state 18


State 5

   31 basic_data_type: KW_BOOLEAN .

    $default  reduce using rule 31 (basic_data_type)


State 6

   30 basic_data_type: KW_INTEGER .

    $default  reduce using rule 30 (basic_data_type)


State 7

   34 basic_data_type: KW_STRING .

    $default  reduce using rule 34 (basic_data_type)


State 8

   32 basic_data_type: KW_CHARACTER .

    $default  reduce using rule 32 (basic_data_type)


State 9

   13 header: KW_VOID . IDENTIFIER OP_LEFT_PARENTHESIS parameters OP_RIGHT_PARENTHESIS

    IDENTIFIER  shift, and go to state 19


State 10

   33 basic_data_type: KW_REAL .

    $default  reduce using rule 33 (basic_data_type)


State 11

    3 variable_declaration: variable_declaration data_types . OP_SEMICOLON
    5 data_types: data_types . OP_COMMA IDENTIFIER
   24 matrix_decl: data_types . OP_COMMA IDENTIFIER multi_bracket
   26 comp: data_types . OP_COMMA IDENTIFIER OP_ASSIGNMENT sinplin const

    OP_SEMICOLON  shift, and go to state 20
    OP_COMMA      shift, and go to state 21


State 12

    1 program: variable_declaration function_declaration . main_decl
   11 main_decl: . KW_MAIN OP_LEFT_PARENTHESIS OP_RIGHT_PARENTHESIS func_body

    KW_MAIN  shift, and go to state 22

    main_decl  go to state 23


State 13

   10 function_declaration: header . func_body function_declaration
   14 func_body: . KW_BEGIN body_code comm2 KW_END

    KW_BEGIN  shift, and go to state 24

    func_body  go to state 25


State 14

    6 data_types: matrix_decl .

    $default  reduce using rule 6 (data_types)


State 15

    7 data_types: comp .

    $default  reduce using rule 7 (data_types)


State 16

    8 data_types: static_comp .

    $default  reduce using rule 8 (data_types)


State 17

    4 data_types: basic_data_type . IDENTIFIER
   12 header: basic_data_type . IDENTIFIER OP_LEFT_PARENTHESIS parameters OP_RIGHT_PARENTHESIS
   23 matrix_decl: basic_data_type . IDENTIFIER multi_bracket
   25 comp: basic_data_type . IDENTIFIER OP_ASSIGNMENT sinplin const

    IDENTIFIER  shift, and go to state 26


State 18

   27 static_comp: KW_STATIC basic_data_type . IDENTIFIER OP_ASSIGNMENT sinplin const

    IDENTIFIER  shift, and go to state 27


State 19

   13 header: KW_VOID IDENTIFIER . OP_LEFT_PARENTHESIS parameters OP_RIGHT_PARENTHESIS

    OP_LEFT_PARENTHESIS  shift, and go to state 28


State 20

    3 variable_declaration: variable_declaration data_types OP_SEMICOLON .

    $default  reduce using rule 3 (variable_declaration)


State 21

    5 data_types: data_types OP_COMMA . IDENTIFIER
   24 matrix_decl: data_types OP_COMMA . IDENTIFIER multi_bracket
   26 comp: data_types OP_COMMA . IDENTIFIER OP_ASSIGNMENT sinplin const

    IDENTIFIER  shift, and go to state 29


State 22

   11 main_decl: KW_MAIN . OP_LEFT_PARENTHESIS OP_RIGHT_PARENTHESIS func_body

    OP_LEFT_PARENTHESIS  shift, and go to state 30


State 23

    1 program: variable_declaration function_declaration main_decl .

    $default  reduce using rule 1 (program)


State 24

   14 func_body: KW_BEGIN . body_code comm2 KW_END
   15 body_code: . %empty  [KW_IF, KW_BREAK, KW_CONTINUE, KW_FOR, KW_RETURN, KW_END, KW_WHILE, KW_WRITESTRING, KW_WRITEINTEGER, KW_WRITEREAL, IDENTIFIER, OP_SEMICOLON]
   16          | . func_data_types OP_SEMICOLON body_code
   17 func_data_types: . basic_data_type IDENTIFIER
   18                | . func_data_types OP_COMMA IDENTIFIER
   19                | . basic_data_type IDENTIFIER OP_ASSIGNMENT sinplin const
   20                | . func_data_types OP_COMMA IDENTIFIER OP_ASSIGNMENT sinplin const
   30 basic_data_type: . KW_INTEGER
   31                | . KW_BOOLEAN
   32                | . KW_CHARACTER
   33                | . KW_REAL
   34                | . KW_STRING

    KW_BOOLEAN    shift, and go to state 5
    KW_INTEGER    shift, and go to state 6
    KW_STRING     shift, and go to state 7
    KW_CHARACTER  shift, and go to state 8
    KW_REAL       shift, and go to state 10

    $default  reduce using rule 15 (body_code)

    body_code        go to state 31
    func_data_types  go to state 32
    basic_data_type  go to state 33


State 25

    9 function_declaration: . %empty  [KW_MAIN]
   10                     | . header func_body function_declaration
   10                     | header func_body . function_declaration
   12 header: . basic_data_type IDENTIFIER OP_LEFT_PARENTHESIS parameters OP_RIGHT_PARENTHESIS
   13       | . KW_VOID IDENTIFIER OP_LEFT_PARENTHESIS parameters OP_RIGHT_PARENTHESIS
   30 basic_data_type: . KW_INTEGER
   31                | . KW_BOOLEAN
   32                | . KW_CHARACTER
   33                | . KW_REAL
   34                | . KW_STRING

    KW_BOOLEAN    shift, and go to state 5
    KW_INTEGER    shift, and go to state 6
    KW_STRING     shift, and go to state 7
    KW_CHARACTER  shift, and go to state 8
    KW_VOID       shift, and go to state 9
    KW_REAL       shift, and go to state 10

    $default  reduce using rule 9 (function_declaration)

    function_declaration  go to state 34
    header                go to state 13
    basic_data_type       go to state 35


State 26

    4 data_types: basic_data_type IDENTIFIER .  [OP_SEMICOLON, OP_COMMA]
   12 header: basic_data_type IDENTIFIER . OP_LEFT_PARENTHESIS parameters OP_RIGHT_PARENTHESIS
   23 matrix_decl: basic_data_type IDENTIFIER . multi_bracket
   25 comp: basic_data_type IDENTIFIER . OP_ASSIGNMENT sinplin const
   28 multi_bracket: . OP_LEFT_BRACKET POSITIVEINT OP_RIGHT_BRACKET
   29              | . multi_bracket OP_LEFT_BRACKET POSITIVEINT OP_RIGHT_BRACKET

    OP_ASSIGNMENT        shift, and go to state 36
    OP_LEFT_PARENTHESIS  shift, and go to state 37
    OP_LEFT_BRACKET      shift, and go to state 38

    $default  reduce using rule 4 (data_types)

    multi_bracket  go to state 39


State 27

   27 static_comp: KW_STATIC basic_data_type IDENTIFIER . OP_ASSIGNMENT sinplin const

    OP_ASSIGNMENT  shift, and go to state 40


State 28

   13 header: KW_VOID IDENTIFIER OP_LEFT_PARENTHESIS . parameters OP_RIGHT_PARENTHESIS
   21 parameters: . basic_data_type IDENTIFIER
   22           | . parameters OP_COMMA basic_data_type IDENTIFIER
   30 basic_data_type: . KW_INTEGER
   31                | . KW_BOOLEAN
   32                | . KW_CHARACTER
   33                | . KW_REAL
   34                | . KW_STRING

    KW_BOOLEAN    shift, and go to state 5
    KW_INTEGER    shift, and go to state 6
    KW_STRING     shift, and go to state 7
    KW_CHARACTER  shift, and go to state 8
    KW_REAL       shift, and go to state 10

    parameters       go to state 41
    basic_data_type  go to state 42


State 29

    5 data_types: data_types OP_COMMA IDENTIFIER .  [OP_SEMICOLON, OP_COMMA]
   24 matrix_decl: data_types OP_COMMA IDENTIFIER . multi_bracket
   26 comp: data_types OP_COMMA IDENTIFIER . OP_ASSIGNMENT sinplin const
   28 multi_bracket: . OP_LEFT_BRACKET POSITIVEINT OP_RIGHT_BRACKET
   29              | . multi_bracket OP_LEFT_BRACKET POSITIVEINT OP_RIGHT_BRACKET
